--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 * {
+  font-family: "Roboto", sans-serif;
   box-sizing: border-box;
 }
 body {
   font-family: "Roboto", sans-serif;
   background-image: url(images/patt.png);
+}
+.indexgorny {
+  vertical-align: super;
 }
 .container {
   width: 1200px;
@@ -220,4 +224,131 @@ nav ul li:hover > ul {
   position: relative;
   top: 14px;
   left: -20px;
+}
+.colorrt li:hover {
+  color: #2b71b7;
+  background-color: white;
+}
+.head {
+  height: 180px;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+[class*="mainimgel"] {
+  height: 90px;
+  width: 103px;
+  align-self: center;
+
+  position: relative;
+  /* top: calc(50% - 45px); */
+  top: calc(-50% + 50px);
+  /* left: calc(50% - 51.5px); */
+}
+.elements {
+  margin-top: 60px;
+}
+.like,
+.bord {
+  margin-top: 10px;
+  margin-right: 10px;
+  align-self: flex-end;
+  width: 30px;
+  height: 30px;
+  /* margin: 10px; */
+  border: #2b71b7 2px solid;
+  background-repeat: no-repeat;
+  text-align: center;
+  background-position: center;
+}
+.like {
+  background-image: url(images/likedef.png);
+}
+.bord {
+  background-image: url(images/borddef.png);
+}
+.like:hover {
+  background-color: #2b71b7;
+  background-image: url(images/likehov.png);
+  cursor: pointer;
+}
+.bord:hover {
+  background-color: #2b71b7;
+  background-image: url(images/bordhov.png);
+  cursor: pointer;
+}
+.elbody {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  height: 473px;
+  border: white 1px solid;
+  background-color: #2b71b7c6;
+}
+h2 {
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
+}
+.mrg {
+  margin-top: 15px;
+  margin-left: 15px;
+}
+.elbodytxt,
+.type,
+.price {
+  color: #fff;
+}
+.elbody p:nth-child(5) {
+  margin-bottom: 30px;
+}
+.price {
+  display: flex;
+  font-size: 48px;
+}
+.cent {
+  top: 0.5em;
+  font-size: 24px;
+}
+.mrg2 {
+  margin-left: calc(50% - 68.5px);
+  margin-bottom: 25px;
+}
+.elbodytxt,
+.type {
+  font-size: 21px;
+}
+[class*="button"],
+[class*="button"] a {
+  width: 210px;
+  height: 50px;
+  font-size: 21px;
+  font-weight: bold;
+  line-height: 47px;
+  color: #fff;
+  text-decoration: none;
+  margin-bottom: 15px;
+  margin-left: 30px;
+}
+.button1 {
+  background-color: #2b71b7;
+  border: 2px solid white;
+}
+.button2 {
+  background-color: #ffffff20;
+}
+.elements {
+  display: flex;
+  flex-wrap: wrap;
+}
+.mainimgelwatch {
+  width: 57px;
+}
+.elbody {
+  margin-bottom: 30px;
+}
+.mainimgellaptop {
+  width: 100px;
+  height: 60px;
 }
